# chatbotInventoryPlatform

./: .gitignore  ChatbotInventoryPlatform-Frontend-prompt.txt  README.md  generate-frontend.js  package-lock.json  pyproject.toml  requirements.txt  scaffold.js
app/: main.py
app/config/: auth.py  database.py
app/models/: admin.py  chatbot.py  conversation.py  document.py  embedding_model.py  llm.py  user.py  vendor.py  vendor_chatbot.py
app/schemas/: admin_schema.py  chatbot_schema.py  llm_schema.py  user_schema.py  vendor_chatbot_schema.py  vendor_schema.py
backend/: .env  client.html  main.py
backend/app/: celery_worker.py  main.py  routers.txt
backend/core/: auth_vendor.py  chatbot.py  config.py  enums.py  rag.py
backend/models/: api_keys.py  chatbots.py  conversations.py  documents.py  llms.py  users.py  vendors.py
backend/routers/: admin.py  api_keys.py  chatbots.py  conversations.py  documents.py  llms.py  users.py  vendors.py
backend/schemas/: api_keys.py  chatbots.py  conversations.py  documents.py  llms.py  users.py  vendors.py
demonstration-video/: video_link.txt
frontend/: .env.local  index.html  proxy.ts  widget.js
frontend/admin/: chatUi.js  chatbotDetailsSection.js  dashboard.html  dashboard.js  original.html
frontend/app/: layout.tsx  page.tsx
frontend/components/: chatbot-list.tsx  document-upload.tsx  login-form.tsx  protected-route.tsx  register-form.tsx  user-list.tsx
frontend/lib/: api.ts  api2.ts  auth.ts  constants.ts  types.ts
frontend/user/: chat.html  dashboard.html  dashboard.js  userSnippet.html
(+248 files in other folders)
