[project]
name = "chatbotinventoryplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "annotated-types>=0.7.0",
    "boto3>=1.41.5",
    "celery>=5.5.3",
    "chromadb>=1.3.5",
    "email-validator>=2.3.0",
    "fastapi[all]>=0.122.0",
    "fastapi-limiter>=0.1.6",
    "httpx>=0.28.1",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.8",
    "pinecone",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.38.0",
    "weaviate-client>=4.18.1",
    "langchain-ollama>=1.0.0",
    "mammoth>=1.11.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "bcrypt==4.0.1",
    "tokenizers>=0.22.1",
]
